<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/twWelcomeMessage"
        android:text="@string/app_name"
        android:textSize="50dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnWelcomeLogin"
        android:text="@string/login"
        android:layout_below="@+id/twWelcomeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnWelcomeRegister"
        android:text="@string/register"
        android:layout_below="@+id/btnWelcomeLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>