<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".LoginActivity"
>
    <TextView
        android:id="@+id/twLoginTitle"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />
    <EditText
        android:id="@+id/etLoginEmail"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress"
        android:layout_below="@+id/twLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />
    <EditText
        android:id="@+id/etLoginPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/etLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />
    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_below="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    />
</RelativeLayout>